app/styles/app.css
*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
body{
    font-size:100%/1.5;
    font-family: 'Lato', sans-serif;
    color:#515151;
    background:#ECECEC;
}
a {
    color:#00B4FF;
    text-decoration:none;
}
a:hover{
    cursor:pointer;
}
ul {
    margin:0;
    padding:0;
}
li {
    list-style:none;
}
label {
    /* display:none; wrap inputs in label and remove this */
}
form li {
    display: block;
    position: relative;
    max-width: 100%;
    margin-bottom: 10px;
    vertical-align: middle;
    overflow: hidden;
}
form input, form select {
    width:90%;
    height: 50px;
    margin-bottom: 1em;
    padding:0.25em 1em;
    font-size:1.1em;
    border: 2px solid #dedede;
    border-radius: 4px;
    -webkit-box-shadow: inset 0 -2px #dedede;
    box-shadow: inset 0 -2px #dedede;
}
header {
    background:#4d4d4d;
    padding:1em;
    position: relative;
    z-index: 1;
    line-height: 4em;
    text-align: center;
    -webkit-box-shadow: inset 0 -1px rgba(255,255,255,0.05),0 1px rgba(0,0,0,0.05);
    box-shadow: inset 0 -1px rgba(255,255,255,0.05),0 1px rgba(0,0,0,0.05);
}
h1, h2, h3 {
    margin:0;
}
h1 {
    font-size: 2em;
    font-weight:normal;
    color:#fff;
    text-shadow: 2px 8px 6px rgba(0,0,0,0.2);
}
h2 {
    font-size:2em;
    font-weight:normal;
    text-align:center;
    vertical-align: middle;
    text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
}
h3 {
    font-size:1.5em;
    margin-bottom:0.5em;
}
h4 {
  background:orange;
  padding:0.25em;
  margin-bottom: 0;
  border-radius: 5px;
  display: inline-block;
  color: #4d4d4d;
}
.filters {
  position:fixed;
  right:0;
  /*float: right;
  width:25%;*/
  background: orange;
  color:#fff;
}
.filters select {
  color:#515151;
  cursor:pointer;
}
.filters label {
  cursor:pointer;
}
.results {
    width:75%;
    display: inline-block;
}
.results li {
    padding:1em 0;
}
.results [class^="icon-"], .results [class*=" icon-"] {
  font-size:1.5em;
  vertical-align: middle;
  margin-right:0.2em;
}
.results span {
  margin-bottom:0.5em;
}
.results h3 {margin-bottom:0.1em;}


.review .rating {
    display:inline-block;
}
.rating li{
    font-size:1.5em;
}
footer{
    height:2em;
    display: table;
    width:100%;
    margin-bottom:1em;
}
footer p{
    display: table-cell;
    text-align:center;
  vertical-align: middle;
}
.icon-phone, .icon-mobile, .icon-location {
    font-size:1.1em;
}
.image{
    width:24%;
    display:inline-block;
    vertical-align: middle;
}
.person img{
    border-radius:100px;
    width:100%;
    max-width:100px;
    max-height:100px;
}
.contactInfo{
    position:relative;
    width: 74%;
    display: inline-block;
    vertical-align: middle;
    padding:0 2%;
}
.person ul {
    width: 100%;
    display: inline-block;
}
.contactInfo li {
    padding:0.2em;
}
.error{
    color:#e53e2d;
    font-weight:700;
}
 button, .button{
    display: inline-block;
    padding: .5em 1em;
    margin:0 auto 1em;
    border: 1px solid transparent;
    border-radius: 4px;
    position: relative;
    vertical-align: top;
    width: 90%;
    height: 54px;
    padding: 0;
    font-size: 1.4em;
    color: white;
    text-align: center;
    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
    background: #657838;
    border: 0;
    border-bottom: 2px solid #4C5F1F;
    border-radius: 5px;
    cursor: pointer;
    -webkit-box-shadow: inset 0 -2px #4C5F1F;
    box-shadow: inset 0 -2px #4C5F1F;
 }
@media only screen and (min-width: 40em) {
    h1{
    font-size: 3em;
    }
    .wrapper{
    width:70%;
    margin: 0 auto;
    }
    .person .icon-user:before {
    font-size:100px;
    width:100px;
    }
    .contactInfo > ul {
        width:49%;
        vertical-align:top;
    }
}
.location {
    overflow: hidden;
    margin-top:1.5em;
    position: relative;
    -webkit-transition: 2s;
    max-height: 150px;
    transition: 1s;
}
.hidden {
    max-height: 0px;
}
#ErrorMessage{
    color:red;
}

.location ul {
    text-align: center;
    padding: 1em;
    background: #8d8d8d;
    background: rgba(0, 0, 0, .4);
    box-shadow: inset 0 8px 8px -8px rgba(0, 0, 0, 0.4),inset 0 -8px 8px -8px rgba(0, 0, 0, 0.4);
    max-height: 100px;
    color: white;
    transition: height 1s;
}
.arrow-up {
    width: 0;
    height: 0;
    border-bottom: 1em solid #555;
    border-left: 1em solid transparent;
    border-right: 1em solid transparent;
    margin: 0;
    left: 26%;
    position: absolute;
    top: -1em;
}
article section{
    padding:1em;
}
article {
    /*margin:0.5em 0.5em 4em 0.5em;*/
}
hr {
    clear:both;
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);

}
button:hover, .button:hover {
background: #586B2B;
}
button:active, .button:active {
border:0;
box-shadow:none;
}

.custom {
  background: #4d4d4d;
  overflow: hidden;
  height:45px;
  width:90%;
  display: inline-block;
  vertical-align: middle;
  margin-left: 0.2em;
}
.custom select {
  position: relative;
  z-index: 1;
  background: #4d4d4d;
  -webkit-appearance: none;
  height: 40px;
  width:100%;
  border: none;
  color: #fff;
  font-size: 1em;
  border-radius: 0;
  box-shadow: none;
  margin: 0;
}
.custom:after {
  z-index: 0;
  content: '▾';
  display: block;
  width: 15px;
  height: 15px;
  position: absolute;
  right: 20px;
  top: 10px;
  color: #fff;
}

[type="checkbox"]:not(:checked),
[type="checkbox"]:checked {
  position: absolute;
  left: -9999px;
}
[type="checkbox"]:not(:checked) + label
{
  color:#999;
  text-shadow:0 1px 0 #c8c8c8;
}
[type="checkbox"]:checked + label {
  color:#4d4d4d;
  text-shadow:0 1px 0 #c8c8c8;
}
[type="number"] {
  position: relative;
  z-index: 1;
  background: #4d4d4d;
  -webkit-appearance: none;
  height: 45px;
  border: none;
  color: #fff;
  font-size: 1em;
  border-radius: 0;
  box-shadow: none;
  margin: 0;
}
.application-loading {
    width: 100px;
    height: 100px;

    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;

    margin: auto;
}
/*
[type="checkbox"]:not(:checked) + label:before,
[type="checkbox"]:checked + label:before,
[type="checkbox"]:not(:checked) + label:after,
[type="checkbox"]:checked + label:after {
  content: '';
  position: absolute;
}
[type="checkbox"]:not(:checked) + label:before,
[type="checkbox"]:checked + label:before {
  left:0; top: -3px;
  width: 65px; height: 30px;
  background: #DDDDDD;
  border-radius: 15px;
  transition: background-color .2s;
}
[type="checkbox"]:not(:checked) + label:after,
[type="checkbox"]:checked + label:after {
  width: 20px; height: 20px;
  transition: all .2s;
  border-radius: 50%;
  background: #7F8C9A;
  top: 2px; left: 5px;
}
[type="checkbox"]:checked + label:before {
  background:#34495E; 
}
[type="checkbox"]:checked + label:after {
  background: #39D2B4;
  top: 2px; left: 40px;
}

[type="checkbox"]:checked + label .ui,
[type="checkbox"]:not(:checked) + label .ui:before,
[type="checkbox"]:checked + label .ui:after {
  position: absolute;
  left: 6px;
  border-radius: 15px;
  font-size: 14px;
  font-weight: bold;
  line-height: 22px;
  transition: all .2s;
}
[type="checkbox"]:not(:checked) + label .ui:before {
  content: "no";
  left: 32px
}
[type="checkbox"]:checked + label .ui:after {
  content: "yes";
  color: #39D2B4;
}
[type="checkbox"]:focus + label:before {
  border: 1px dashed #777;
  box-sizing: border-box;
  margin-top: -1px;ß
}*/

@font-face {
  font-family: 'icomoon';
  src:url('fonts/icomoon.eot?-aea1px');
  src:url('fonts/icomoon.eot?#iefix-aea1px') format('embedded-opentype'),
    url('fonts/icomoon.ttf?-aea1px') format('truetype'),
    url('fonts/icomoon.woff?-aea1px') format('woff'),
    url('fonts/icomoon.svg?-aea1px#icomoon') format('svg');
  font-weight: normal;
  font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
  font-family: 'icomoon';
  speak: none;
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;

  /* Better Font Rendering =========== */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.icon-person:before {
  content: "\e600";
  font-size:1.2em;
}
.icon-settings-ethernet:before {
  content: "\e601";
}
.icon-phone:before {
  content: "\e602";
}
.icon-network:before {
  content: "\e603";
}
.icon-office:before {
  content: "\e903";
}
.icon-projector:before {
  content: "\e95b";
}
.icon-warning:before {
  content: "\ea08";
}
.filters .icon-person, .filters .icon-office {
	display:inline;
	vertical-align: middle;
	color:#999;
}
.filters .icon-projector, .filters .icon-phone {
  margin-right:0.4em;
}
.filters [class^="icon-"], .results [class*=" icon-"] {
  font-size:1.3em;
}
small {font-size: 60%;}
.feedback {background:#ececec; padding:1em; border:1px solid #ddd; color:#333;}

select::-ms-expand {
  display: none;
}

